--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.0",
+    "@types/uuid": "^8.3.4",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
@@ -30,6 +31,7 @@
     "pg": "^8.7.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^8.3.2"
   }
 }
