--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "youch-terminal": "^2.1.0"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.0",
     "luxon": "^2.3.0",
     "pg": "^8.7.1",
+    "phc-argon2": "^1.1.2",
     "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
