--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/view": "^6.1.1",
+    "adonis5-scheduler": "^2.0.2",
     "luxon": "^2.3.0",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
