--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.0",
+    "@types/jsdom": "^16.2.14",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "adonis-preset-ts": "^2.1.0",
@@ -22,6 +23,7 @@
     "execa": "5.1.1",
     "get-port": "5.1.1",
     "japa": "^4.0.0",
+    "jsdom": "^19.0.0",
     "pino-pretty": "^7.5.0",
     "prettier": "^2.5.1",
     "supertest": "^6.2.2",
