--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@adonisjs/repl": "^3.1.0",
     "@adonisjs/view": "^6.1.1",
     "adonis5-scheduler": "^2.0.2",
+    "kafkajs": "^1.15.0",
     "luxon": "^2.3.0",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
